@@ -41,6 +41,9 @@ mdds 0.9.0
     an iterator) now stores 'position' which is the logical position
     of the first element of a block.
 
+  * added position_type and const_position_type which are typedefs to
+    the return types of position() methods.
+
 mdds 0.8.1
 
 * multi_type_vector
